// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingLogo is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingLogo testClass1 testClass2 css-1vtjeqi-euiLoadingLogo-m"
  data-test-subj="test subject string"
  role="progressbar"
>
  <span
    class="css-1jhdo6d-euiLoadingLogo__icon"
  >
    <span
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`EuiLoadingLogo logo is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingLogo testClass1 testClass2 css-1vtjeqi-euiLoadingLogo-m"
  data-test-subj="test subject string"
  role="progressbar"
>
  <span
    class="css-1jhdo6d-euiLoadingLogo__icon"
  >
    <span
      data-euiicon-type="logoElastic"
    />
  </span>
</span>
`;

exports[`EuiLoadingLogo size l is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingLogo css-1uvafun-euiLoadingLogo-l"
  role="progressbar"
>
  <span
    class="css-1jhdo6d-euiLoadingLogo__icon"
  >
    <span
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`EuiLoadingLogo size m is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingLogo css-1vtjeqi-euiLoadingLogo-m"
  role="progressbar"
>
  <span
    class="css-1jhdo6d-euiLoadingLogo__icon"
  >
    <span
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`EuiLoadingLogo size xl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingLogo css-kip3vj-euiLoadingLogo-xl"
  role="progressbar"
>
  <span
    class="css-1jhdo6d-euiLoadingLogo__icon"
  >
    <span
      data-euiicon-type="logoKibana"
    />
  </span>
</span>
`;
